Closed
Bug 186573
Opened 22 years ago
Closed 22 years ago
inbox not bold nor number of messages displayed on secondary pop-3 e-mail account when downloading mail is complete. only green arrow shows up.
Categories
(SeaMonkey :: MailNews: Message Display, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.4beta
People
(Reporter: polocountry, Assigned: sspitzer)
References
Details
Attachments
(1 file, 2 obsolete files)
|
658 bytes,
patch
|
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.3a) Gecko/20021212
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.3a) Gecko/20021212
I have two pop3 email accounts downloading to Mozilla mail. With prior builds,
each account finished downloading mail, the inbox of each would be bold and th
number of unread messages would be displayed as would be the green arrow. Under
the current build (1.3a), this now only occurs with the primary account. In
other words, the second account does not bold the 'inbox' nor display the number
of messages downloaded when complete. The green arrow does, however, appear.
Reproducible: Always
Steps to Reproduce:
1.open Mozilla when connected with the internet.
2.password is already saved on both accounts
3.mail automatically downloads but when complete only bolds the inbox and
displays the number of messages downloaded on the primary pop3 email account.
Actual Results:
See step number 3
Expected Results:
both primary and secondary accounts should have the inbox bolded and display the
number of messages downloaded.
I am using the modern theme. This problem did not occur with prior Mozilla builds.
BTW - awesome product!!!! Have a great holiday.
Comment 1•22 years ago
|
||
*** Bug 189650 has been marked as a duplicate of this bug. ***
Comment 2•22 years ago
|
||
Bug 188827 looks like a dupe of this one too
Comment 3•22 years ago
|
||
I can confirm this new bug for the Linux version as well - it was not present in
1.2. Already missed a meeting because of it :-) Otherwise a great software!!!
Comment 4•22 years ago
|
||
Would like to confirm that I too have experienced this bug using standard build
1.3 (20030312) under XP SP1, although other comments here suggest the platform
isnt that important.
I too have 2 mail accounts and the second no longer shows bold text nor inbox
content unless you explicitly select that account. Once this has been done, the
contents are revealed (they are downloaded, just not shown).
I am using modern theme and like the original bug reporter have the accounts
automatically download on connection.
Otherwise, Moz is becoming a REALLY nice product. Thanks guys.
Comment 5•22 years ago
|
||
Confirming on
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.3) Gecko/20030312
But it's not consistent; I've only seen it a few times. (I don't get a lot of
mail at my secondary POP box.)
FWIW, I also have a third POP account, where I get almost no mail; I have not
seen this symptom on that account, but I've only received one message there
since noticing this symptom on the secondary.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 6•22 years ago
|
||
Just for confirmation, I have exactly the same problem (two accounts, only first
one shows bold & number of messages, other shows only green arrow for new messages)
Using Mozilla 1.3 final, Modern theme on Linux
Using trunk build 20030408 on linux I don't see the problem.
Profile has 2 pop accounts with "Leave messages on Server" checked and
"Automatically download new messages" checked. Biff set for 1 minute
I have Junk Mail Control=On and moving Junk to the Junk folder which is a new
feature that might have blocked the 2nd biff but that is not the case for me.
Can those of you who reported this try it with a build dated 4-8-2003 or later
to see if you still have the problem. If so, can you tell me what your POP
server settings are.
*** Bug 188827 has been marked as a duplicate of this bug. ***
Comment 9•22 years ago
|
||
I am not yet ready to switch to using 1.4 as my default client, or even to let
it share my local mailboxes with 1.3. Therefore, my 1.4 POP accounts are set
up with "leave messages on server" as yours is -- UNLIKE my 1.3 setup, where I
always remove the messages from the server. I also don't use 1.4 to access my
busiest mail account, so the chances of seeing the symptom occur are very
unlikely.
Settings on 1.3 for all three accounts are:
[ ] SSL
[x] check at startup
[x] check every 10 minutes
[x] automatically download
[ ] leave messages on server
[ ] empty trash on exit.
Junk controls are enabled for all three accounts, altho I get very little junk
do to diligent mail providers.
Comment 10•22 years ago
|
||
*** Bug 201478 has been marked as a duplicate of this bug. ***
Comment 11•22 years ago
|
||
*** Bug 201643 has been marked as a duplicate of this bug. ***
Comment 12•22 years ago
|
||
*** Bug 201847 has been marked as a duplicate of this bug. ***
Comment 14•22 years ago
|
||
*** Bug 202261 has been marked as a duplicate of this bug. ***
Comment 15•22 years ago
|
||
*** Bug 202617 has been marked as a duplicate of this bug. ***
Comment 16•22 years ago
|
||
*** Bug 202739 has been marked as a duplicate of this bug. ***
Comment 17•22 years ago
|
||
Note a very similar report in Bug 195827 -- in that case, folders are not being
highlighted when they get new messages via filtering, rather than (necessarily)
being in a second account.
Comment 18•22 years ago
|
||
Another possibly related issue: Bug 145982
Updated•22 years ago
|
Flags: blocking1.4?
Comment 19•22 years ago
|
||
*** Bug 203418 has been marked as a duplicate of this bug. ***
Comment 20•22 years ago
|
||
Seems like this is sufficiently related to bug 161999 that this should be either
be duped to it or a depends or blocks created.
To me, the gyrations necessary to discover how many messages unread in each
folder constitutes major loss of function warranting a severity upgrade.
Comment 21•22 years ago
|
||
I would dupe this to that except: now that 161999 has Seth's attention, I am
entirely unclear whether he intends to fix the original symptom or the symptom
of this bug, which was *incorrectly* added in to that bug around Bug 161999
comment 18.
| Assignee | ||
Comment 22•22 years ago
|
||
accepting
trying to fix the whole enchilada, not just the cheese.
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.4beta
| Assignee | ||
Comment 23•22 years ago
|
||
ok, I think have fixed this scenario (the pop / mail automatically downloading /
inbox unread not updating) in bug #161999
| Assignee | ||
Comment 24•22 years ago
|
||
| Assignee | ||
Comment 25•22 years ago
|
||
david set me straight
for perf, call this once, when done downloading, not on each message.
Attachment #122269 -
Attachment is obsolete: true
| Assignee | ||
Comment 26•22 years ago
|
||
Attachment #122270 -
Attachment is obsolete: true
Comment 27•22 years ago
|
||
Comment on attachment 122271 [details] [diff] [review]
fix the comment
r/sr=bienvenu
Attachment #122271 -
Flags: superreview+
| Assignee | ||
Comment 28•22 years ago
|
||
fixed.
r/sr=bienvenu, a=sspitzer
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•22 years ago
|
Flags: blocking1.4?
Comment 29•21 years ago
|
||
*** Bug 200316 has been marked as a duplicate of this bug. ***
Updated•20 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•