fix for bug #186573

when pop mail comes in, and we aren't looking at the inbox
we don't update the unread / total counts.

r/sr=bienvenu, a=sspitzer